[project]
name = "mri-wave-scheduling-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.14",
    "langchain-openai>=1.3.5",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "streamlit>=1.59.2",
]
